Adding changes to the CRUD documents and trying to fix getAllProducts, as it currently gives an error when I test it with Postman.